backends/c/tests/output_nodocs/my_header.h

typedef struct my_library_simpleservice my_library_simpleservice;
typedef enum my_library_ffierror
    {
    MY_LIBRARY_FFIERROR_OK = 0,
    MY_LIBRARY_FFIERROR_NULL = 100,
    MY_LIBRARY_FFIERROR_PANIC = 200,
    MY_LIBRARY_FFIERROR_FAIL = 300,
    } my_library_ffierror;
typedef struct my_library_inner
    {
    float x;
    } my_library_inner;
typedef struct my_library_local
    {
    uint32_t x;
    } my_library_local;
typedef struct my_library_useasciistringpattern
    {
    const char* ascii_string;
    } my_library_useasciistringpattern;
typedef struct my_library_vec3f32
    {
    float x;
    float y;
    float z;
    } my_library_vec3f32;
typedef uint8_t (*my_library_fptr_fn_u8_rval_u8)(uint8_t x0);
typedef uint8_t (*my_library_callbacku8)(uint8_t value);
typedef uint32_t (*my_library_mycallback)(uint32_t value);
typedef uint32_t (*my_library_mycallbacknamespaced)(uint32_t value);
typedef struct my_library_container
    {
    my_library_local foreign;
    } my_library_container;
typedef struct my_library_sliceu32
    {
    const uint32_t* data;
    uint64_t len;
    } my_library_sliceu32;
typedef struct my_library_sliceu8
    {
    const uint8_t* data;
    uint64_t len;
    } my_library_sliceu8;
typedef struct my_library_slicemutu32
    {
    const uint32_t* data;
    uint64_t len;
    } my_library_slicemutu32;
typedef struct my_library_slicemutu8
    {
    const uint8_t* data;
    uint64_t len;
    } my_library_slicemutu8;
typedef struct my_library_optioninner
    {
    my_library_inner t;
    uint8_t is_some;
    } my_library_optioninner;
typedef void (*my_library_mycallbackvoid)(const void* ptr);
typedef struct my_library_delegatecallbackmycallbackcontextual
    {
    my_library_mycallbackcontextual callback;
    const void* context;
    } my_library_delegatecallbackmycallbackcontextual;
typedef struct my_library_sliceuseasciistringpattern
    {
    const my_library_useasciistringpattern* data;
    uint64_t len;
    } my_library_sliceuseasciistringpattern;
typedef struct my_library_slicevec3f32
    {
    const my_library_vec3f32* data;
    uint64_t len;
    } my_library_slicevec3f32;
typedef uint8_t (*my_library_callbackffislice)(my_library_sliceu8 slice);
typedef void (*my_library_callbackslicemut)(my_library_slicemutu8 slice);
typedef my_library_vec3f32 (*my_library_callbackhugevecslice)(my_library_slicevec3f32 slice);
uint8_t callback(my_library_fptr_fn_u8_rval_u8 callback, uint8_t value);
uint32_t pattern_ascii_pointer_len(const char* x, my_library_useasciistringpattern y);
my_library_sliceuseasciistringpattern pattern_ascii_pointer_return_slice();
uint32_t pattern_ffi_slice_1(my_library_sliceu32 ffi_slice);
uint32_t pattern_ffi_slice_1b(my_library_slicemutu32 ffi_slice);
my_library_vec3f32 pattern_ffi_slice_2(my_library_slicevec3f32 ffi_slice, int32_t i);
void pattern_ffi_slice_3(my_library_slicemutu8 slice, my_library_callbackslicemut callback);
void pattern_ffi_slice_4(my_library_sliceu8 slice, my_library_slicemutu8 slice2);
void pattern_ffi_slice_5(const my_library_sliceu8* slice, my_library_slicemutu8* slice2);
void pattern_ffi_slice_6(const my_library_slicemutu8* slice, my_library_callbacku8 callback);
uint8_t pattern_ffi_slice_delegate(my_library_callbackffislice callback);
my_library_vec3f32 pattern_ffi_slice_delegate_huge(my_library_callbackhugevecslice callback);
my_library_optioninner pattern_ffi_option_1(my_library_optioninner ffi_slice);
my_library_inner pattern_ffi_option_2(my_library_optioninner ffi_slice);
uint8_t pattern_ffi_bool(uint8_t ffi_bool);
char pattern_ffi_cchar(char ffi_cchar);
const char* pattern_ffi_cchar_const_pointer(const char* ffi_cchar);
char* pattern_ffi_cchar_mut_pointer(char* ffi_cchar);
uint64_t pattern_api_guard();
uint32_t pattern_callback_1(my_library_mycallback callback, uint32_t x);
my_library_mycallbackvoid pattern_callback_2(my_library_mycallbackvoid callback);
void pattern_callback_3(my_library_delegatecallbackmycallbackcontextual callback, uint32_t x);
uint32_t pattern_callback_4(my_library_mycallbacknamespaced callback, uint32_t x);
void pattern_surrogates_1(my_library_local s, my_library_container* c);
my_library_ffierror simple_service_destroy(my_library_simpleservice** context);